--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <i class="fa fa-search-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="images/portfolio/Crystals_Collector.PNG" alt="Crystals Collector">
+            <img class="img-fluid" src="images/portfolio/bamazon.PNG" alt="bamazon">
           </a>
         </div>
       </div>
@@ -394,12 +394,13 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2 class="text-secondary text-uppercase mb-0">Crystals Collector</h2>
+            <h2 class="text-secondary text-uppercase mb-0">bamazon</h2>
             <hr class="star-dark mb-5">
-            <img class="img-fluid mb-5" src="images/portfolio/Crystals_Collector.PNG" alt="">
+            <img class="img-fluid mb-5" src="images/portfolio/bamazon.PNG" alt="">
             </a>
-            <p class="mb-5">Click the crystals to try and match the random number that has generated. Good luck! Check it out at
-              <a href="https://mnevins09.github.io/Crystals-Collector/">https://mnevins09.github.io/Crystals-Collector/</a>
+            <p class="mb-5">Using MySQL database and Node.js, I've created a terminal program that allows users to order from the already
+              created database in MySQL workbench.  You can view my code here.
+              <a href="https://github.com/mnevins09/bamazon">https://github.com/mnevins09/bamazon</a>
             </p>
             <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
               <i class="fa fa-close"></i>
