--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <i class="fa fa-search-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="images/portfolio/Psychic.PNG" alt="Psychic Game">
+            <img class="img-fluid" src="images/portfolio/friendfinder.PNG" alt="Psychic Game">
           </a>
         </div>
         <div class="col-md-6 col-lg-4">
@@ -369,12 +369,12 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2 class="text-secondary text-uppercase mb-0">Psychic Game</h2>
+            <h2 class="text-secondary text-uppercase mb-0">Friend Finder</h2>
             <hr class="star-dark mb-5">
-            <img class="img-fluid mb-5" src="images/portfolio/Psychic.PNG" alt="">
+            <img class="img-fluid mb-5" src="images/portfolio/friendfinder.PNG" alt="">
             </a>
-            <p class="mb-5">Guess which letter the Swami is thinking of in The Psychic Game! Check it out at
-              <a href="https://mnevins09.github.io/Psychic-Game/">https://mnevins09.github.io/Psychic-Game/</a>
+            <p class="mb-5">Want to find a friend?  Answer a few questions and find your next friend!
+              <a href="https://safe-thicket-92111.herokuapp.com/">https://safe-thicket-92111.herokuapp.com/</a>
             </p>
             <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
               <i class="fa fa-close"></i>
