--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <i class="fa fa-search-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="images/portfolio/Giphy.PNG" alt="Giftastic">
+            <img class="img-fluid" src="images/portfolio/burger.PNG" alt="Giftastic">
           </a>
         </div>
         <div class="col-md-6 col-lg-4">
@@ -343,13 +343,13 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2 class="text-secondary text-uppercase mb-0">Giftastic</h2>
+            <h2 class="text-secondary text-uppercase mb-0">Burger</h2>
             <hr class="star-dark mb-5">
-            <img class="img-fluid mb-5" src="images/portfolio/Giphy.PNG" alt="">
+            <img class="img-fluid mb-5" src="images/portfolio/burger.PNG" alt="">
             </a>
-            <p class="mb-5">Using the giphy.com api, jQuery, HTML, Bootstrap and JavaScript, I dynamically created the content on this page.
-              Check it out at
-              <a href="https://mnevins09.github.io/Gipher/">https://mnevins09.github.io/Gipher/</a>
+            <p class="mb-5">In the burger app, I used MySQL, Express, Javascript, and Handlebars to create an app that allows you to devour
+              an item on the menu as well as create any item that you would like. Check it out at:
+              <a href="https://immense-brushlands-27340.herokuapp.com/">https://immense-brushlands-27340.herokuapp.com/</a>
             </p>
             <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
               <i class="fa fa-close"></i>
@@ -373,7 +373,7 @@
             <hr class="star-dark mb-5">
             <img class="img-fluid mb-5" src="images/portfolio/friendfinder.PNG" alt="">
             </a>
-            <p class="mb-5">Want to find a friend?  Answer a few questions and find your next friend!
+            <p class="mb-5">Want to find a friend? Answer a few questions and find your next friend!
               <a href="https://safe-thicket-92111.herokuapp.com/">https://safe-thicket-92111.herokuapp.com/</a>
             </p>
             <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
@@ -399,7 +399,7 @@
             <img class="img-fluid mb-5" src="images/portfolio/bamazon.PNG" alt="">
             </a>
             <p class="mb-5">Using MySQL database and Node.js, I've created a terminal program that allows users to order from the already
-              created database in MySQL workbench.  You can view my code here.
+              created database in MySQL workbench. You can view my code here.
               <a href="https://github.com/mnevins09/bamazon">https://github.com/mnevins09/bamazon</a>
             </p>
             <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
