--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <i class="fa fa-search-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="images/portfolio/Sports_Trivia.PNG" alt="Sports Trivia">
+            <img class="img-fluid" src="images/portfolio/spa.PNG" alt="Sports Trivia">
           </a>
         </div>
         <div class="col-md-6 col-lg-4">
@@ -318,12 +318,13 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2 class="text-secondary text-uppercase mb-0">Sports Trivia</h2>
+            <h2 class="text-secondary text-uppercase mb-0">Coder's Oasis Spa</h2>
             <hr class="star-dark mb-5">
-            <img class="img-fluid mb-5" src="images/portfolio/Sports_Trivia.PNG" alt="">
+            <img class="img-fluid mb-5" src="images/portfolio/spa.PNG" alt="">
             </a>
-            <p class="mb-5">Try your luck at some sports trivia! Check it out at
-              <a href="https://mnevins09.github.io/Sports-Trivia/">https://mnevins09.github.io/Sports-Trivia</a>
+            <p class="mb-5">Using MySql, Express, Node, Passport, and Bcrypt, I've created a spa app implementing login authentication. Check
+              it out at
+              <a href="https://sheltered-dawn-11317.herokuapp.com/">https://sheltered-dawn-11317.herokuapp.com/</a>
             </p>
             <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
               <i class="fa fa-close"></i>
