--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <i class="fa fa-search-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="images/portfolio/burger.PNG" alt="Giftastic">
+            <img class="img-fluid" src="images/portfolio/scraper.PNG" alt="Giftastic">
           </a>
         </div>
         <div class="col-md-6 col-lg-4">
@@ -344,13 +344,14 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2 class="text-secondary text-uppercase mb-0">Burger</h2>
+            <h2 class="text-secondary text-uppercase mb-0">Reddit Politics Scraper</h2>
             <hr class="star-dark mb-5">
-            <img class="img-fluid mb-5" src="images/portfolio/burger.PNG" alt="">
+            <img class="img-fluid mb-5" src="images/portfolio/scraper.PNG" alt="">
             </a>
-            <p class="mb-5">In the burger app, I used MySQL, Express, Javascript, and Handlebars to create an app that allows you to devour
-              an item on the menu as well as create any item that you would like. Check it out at:
-              <a href="https://immense-brushlands-27340.herokuapp.com/">https://immense-brushlands-27340.herokuapp.com/</a>
+            <p class="mb-5">In the Reddit Politics Scraper, I used MongoDB, Mongoose, Cheerio, Express, Javascript, and Handlebars to create
+              an app that allows you to scrape from the reddit.com/r/politics website, save articles, and add notes to articles.
+              Check it out at:
+              <a href="https://glacial-caverns-72794.herokuapp.com/">https://glacial-caverns-72794.herokuapp.com/</a>
             </p>
             <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
               <i class="fa fa-close"></i>
