--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <i class="fa fa-search-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="images/portfolio/bamazon.PNG" alt="bamazon">
+            <img class="img-fluid" src="images/portfolio/clicky.PNG" alt="bamazon">
           </a>
         </div>
       </div>
@@ -396,13 +396,13 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2 class="text-secondary text-uppercase mb-0">bamazon</h2>
+            <h2 class="text-secondary text-uppercase mb-0">New York Click!</h2>
             <hr class="star-dark mb-5">
-            <img class="img-fluid mb-5" src="images/portfolio/bamazon.PNG" alt="">
+            <img class="img-fluid mb-5" src="images/portfolio/clicky.PNG" alt="">
             </a>
-            <p class="mb-5">Using MySQL database and Node.js, I've created a terminal program that allows users to order from the already
-              created database in MySQL workbench. You can view my code here.
-              <a href="https://github.com/mnevins09/bamazon">https://github.com/mnevins09/bamazon</a>
+            <p class="mb-5">I created this app with React.  Play this game by clicking each picture once. The pictures will shuffle each time you click. If you click on
+              the same picture twice, you'll have to start over. Good luck!  You can see my live site at
+              <a href="https://mnevins09.github.io/Clicky-Game/">https://mnevins09.github.io/Clicky-Game/</a>
             </p>
             <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
               <i class="fa fa-close"></i>
